[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ku2h7 <kukuhsyaifudin7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
poetry-dotenv-plugin = "^0.2.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
